--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-i18next": "^11.10.0",
+    "react-input-mask": "^2.0.4",
     "react-modal": "^3.13.1",
+    "react-phone-number-input": "^3.1.23",
     "styled-components": "^5.3.0",
     "url-loader": "^4.1.1"
   },
